--- a/package.json
+++ b/package.json
@@ -3,14 +3,33 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www -e .js,.hbs",
+    "seed:zone": "node ./bin/seed/seed.zone.js",
+    "seed:foreignsource": "node ./bin/seed/seed.foreignsource.js",
+    "seed:kingdom": "node ./bin/seed/seed.kingdom.js",
+    "seed:subkingdom": "node ./bin/seed/seed.subkingdom.js",
+    "seed:division": "node ./bin/seed/seed.division.js",
+    "seed:divisionclass": "node ./bin/seed/seed.divisionclass.js",
+    "seed:divisionorder": "node ./bin/seed/seed.divisionorder.js",
+    "seed:family": "node ./bin/seed/seed.family.js",
+    "seed:genus": "node ./bin/seed/seed.genus.js",
+    "seed:plant": "node ./bin/seed/seed.plant.js",
+    "seed:species": "node ./bin/seed/seed.species.js",
+    "seed:synonym": "node ./bin/seed/seed.synonym.js",
+    "seed:commonname": "node ./bin/seed/seed.commonname.js",
+    "seed:speciesdistribution": "node ./bin/seed/seed.speciesdistribution.js",
+    "seed:speciesimage": "node ./bin/seed/seed.speciesimage.js",
+    "seed:foreignsourcesplant": "node ./bin/seed/seed.foreignsourcesplant.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^12.0.4",
     "express": "~4.16.1",
-    "hbs": "~4.0.4",
+    "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
+    "mongoose": "^6.1.6",
     "morgan": "~1.9.1"
   }
 }
