--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www -e .js,.hbs",
-    "seed:plant": "node ./bin/seed/seed.plant.js"
+    "seed:plant": "node ./bin/seed/seed.plant.js",
+    "seed:player": "node ./bin/seed/seed.player.js"
   },
   "dependencies": {
+    "cloudinary": "^1.28.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^12.0.4",
@@ -15,6 +17,8 @@
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "mongoose": "^6.1.6",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "multer": "^1.4.4",
+    "multer-storage-cloudinary": "^4.0.0"
   }
 }
