--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "seed:recipes": "node ./bin/seed/seed.recipe.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cloudinary": "^1.28.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
