--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
     "multer-storage-cloudinary": "^4.0.0"
+  },
+  "engines" : {
+    "node": "16.x"
   }
 }
